examples/negative/type_errors/L2/10_var_bool_upper_lim_case.ob
MODULE UpperLimCase;

VAR x,y: INTEGER;
    b: BOOLEAN;

BEGIN
  x := 0;
  b := TRUE;
  CASE x OF
    0..b: y := 0
  | 20: y := 1
  END
END UpperLimCase.
